# ailov_asw_code_challenge_24

./: CMakeLists.txt  README.md  challenge_api.c  extra_thoughts.txt  main.c  run.sh
includes/: challenge_api.h  lis3mdl_register_map.h  lis3mdl_specs.h
